horizontal scroll fix

--- a/assets/css/comn-style.css
+++ b/assets/css/comn-style.css
@@ -230,8 +230,8 @@ body {
   margin: 0 auto;
 }
 .container-mid {
-  width: 100%;
-  padding-inline: 60px;
+  width: calc(100% - 100px);
+  padding-inline: 10px;
   max-width: 1920px;
   margin: 0 auto;
 }
